# FastAPI-Chat

./: .env  Makefile  READMY.md  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
