[tool.poetry]
name = "fastapi-chat"
version = "0.1.0"
description = ""
authors = ["rokotsu <garretdejl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
motor = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
